--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 
 services:
     web-alohomora:
-        build: "./web-alohomora/.build-alohomora"
+        build: "./.build-alohomora"
         container_name: web-alohomora
         volumes:
-            - "./web-alohomora/data:/usr/src/app/data"
+            - "./alohomora/data:/usr/src/app/data"
         ports:
             - "127.0.0.1:80:8080"
         environment:
